# autonomous-sre-agent

./: .coverage  .gitignore  .project_v2_creation_summary.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Critical_Analysis_Autonomous_Incident_Response_and_Remediation.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  Technical_Analysis.md  ai_agent_architecture_research.md  docker-compose.deps.yml  master_system_document.md  pyproject.toml  rag_implementation_analysis.md  test_debug.py
.copilot-tracking/link-integrity/: markdown-link-issues-branch-protection-guide.csv  markdown-link-issues-unresolved.csv  markdown-link-issues.csv
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  gitleaks.yml  project-issue-state-sync.yml  project-status-automation.yml  security-gates.yml
.specify/memory/: constitution.md  engineering_standards.md
config/: README.md  agent.yaml
docs/: README.md  getting-started.md
docs/api/: api_contracts.md
docs/architecture/: FAANG_Documentation_Standards.md  Technology_Stack.md  architecture.html  architecture.md  data_model.md  dependency_graph.md  extensibility.md  incident_taxonomy.md  multi-agent-coordination.md  overview.md  permissions-and-rbac.md  phase_1_5_migration.md  phase_2_2_token_optimization.md  sequence_incident_lifecycle.md  state_incident_model.md  target_architecture.md
docs/development/: README.md  code-style.md  contributing.md  setup.md  testing.md
docs/operations/: aws_data_collection_improvements.md  branch_protection_setup_guide.md  ci_cd_pipeline.md  external_dependencies.md  graduation_criteria.md  live_demo_guide.md  localstack_live_incident_demo.md  operational_readiness.md  runbook_deployment.md  runbook_incident_response.md  runbook_kill_switch.md  runbook_phase_management.md  slos_and_error_budgets.md  test_infrastructure.md
docs/plans/: demo_hardening_acceptance_criteria.md  demo_hardening_phase3_plan.md
docs/project/: CHANGELOG.md  FAANG_Documentation_Standards.md  ImprovementAreasAfterPhase1_5.md  aws_implementation_plan.md  aws_metric_generation_acceptance_criteria.md  aws_metric_generation_integration_plan.md  documentation_improvement_review.md  engineering_standards.md  glossary.md  improvement_areas_phase_1_5.md  live_demo_expansion_ac.md  live_demo_expansion_plan.md  onboarding.md  phase_1_status_report.md  roadmap.md  roadmap_competitive_driven.md
docs/reference/: README.md  api.md  commands.md  document-taxonomy.md  glossary.md  runbooks.md
docs/reports/: README.md  alignment_report.md  autonomous_sre_agent_phase2_action_lock_live_demos_implementation_plan.md  autonomous_sre_agent_phase2_action_lock_live_demos_run_validation.md  autonomous_sre_agent_phase2_action_lock_live_demos_verification_report.md  autonomous_sre_agent_phase2_core_implementation_plan.md  autonomous_sre_agent_phase2_core_run_validation.md  autonomous_sre_agent_phase2_core_verification_report.md  autonomous_sre_agent_phase2_e2e_action_lock_implementation_plan.md  autonomous_sre_agent_phase2_e2e_action_lock_verification_report.md  autonomous_sre_agent_phase2_etcd_container_stress_implementation_plan.md  autonomous_sre_agent_phase2_etcd_container_stress_verification_report.md  autonomous_sre_agent_phase2_lock_k8s_implementation_plan.md  autonomous_sre_agent_phase2_redis_etcd_lock_acceptance_criteria.md  autonomous_sre_agent_phase2_redis_etcd_lock_implementation_plan.md  autonomous_sre_agent_phase2_redis_etcd_lock_verification_report.md  aws_data_collection_review.md  documentation_management_plan.md  documentation_optimization_critical_review.md  documentation_restructure_acceptance_criteria.md  documentation_restructure_execution_plan.md  documentation_restructure_plan_compliance_check.md  documentation_restructure_verification_report.md  implementation_progress.md  improvement_areas_phase_1_5.md  (+17 more)
scripts/: _demo_utils.py  _tmp_validate_live_demos.py  demo_scenario.py  doc_audit_extract.py  e2e_validate.py  live_demo_11_azure_operations.py  live_demo_1_telemetry_baseline.py  live_demo_cascade_failure.py  live_demo_cloudwatch_enrichment.py  live_demo_deployment_regression.py  live_demo_ecs_multi_service.py  live_demo_eventbridge_reaction.py  live_demo_http_optimizations.py  live_demo_http_server.py  live_demo_localstack_aws.py  live_demo_localstack_incident.py  live_e2e_demo.py  localstack_bridge.py  mock_lambda.py  run.sh  setup_deps.sh
tests/: conftest.py  localstack_pro_standard.py
(+492 files in other folders)
