[project]
name = "sre-agent"
version = "0.1.0"
description = "Autonomous SRE Agent — AI-powered incident detection, diagnosis, and remediation"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Core
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "click>=8.0",

    # Async
    "anyio>=4.0",
    "httpx>=0.27",

    # Telemetry adapters
    "prometheus-api-client>=0.5",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",

    # Event bus
    "aiokafka>=0.10",
]

[project.optional-dependencies]
newrelic = ["newrelic-telemetry-sdk>=0.5"]
aws = ["boto3>=1.34"]
azure = ["azure-identity>=1.15", "azure-keyvault-secrets>=4.8", "azure-storage-blob>=12.19"]
vault = ["hvac>=2.1"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "testcontainers>=3.7",
    "ruff>=0.3",
    "mypy>=1.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["src/sre_agent"]

[tool.coverage.report]
fail_under = 85
