[project]
name = "sre-agent"
version = "0.1.0"
description = "Autonomous SRE Agent — AI-powered incident detection, diagnosis, and remediation"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Core
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "click>=8.0",

    # Async
    "anyio>=4.0",
    "httpx>=0.27",

    # Telemetry adapters
    "prometheus-api-client>=0.5",
    "prometheus-client>=0.20",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",

    # Event bus
    "aiokafka>=0.10",

    # Environment management
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
newrelic = ["newrelic-telemetry-sdk>=0.5"]
aws = ["boto3>=1.34"]
azure = ["azure-identity>=1.15", "azure-keyvault-secrets>=4.8", "azure-storage-blob>=12.19", "azure-mgmt-web>=7.0"]
vault = ["hvac>=2.1"]
coordination = ["redis>=5.0", "etcd3>=0.12"]
kubernetes = ["kubernetes>=29.0.0,<36.0.0"]
intelligence = [
    "chromadb>=0.4",
    "sentence-transformers>=2.2",
    "openai>=1.0",
    "anthropic>=0.20",
    "tiktoken>=0.5",
]
vectordb = ["chromadb>=0.4"]
llm = ["openai>=1.0", "anthropic>=0.20", "tiktoken>=0.5"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "testcontainers>=3.7",
    "fakeredis>=2.23",
    "ruff>=0.3",
    "mypy>=1.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "BLE"]
ignore = [
    # BLE001: blind exception — intentionally suppressed for health probes
    # (health_check methods must not crash the provider registry)
    # Use # noqa: BLE001 at each deliberate broad-catch site.
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 30
timeout_method = "thread"
markers = [
    "unit: Pure domain logic tests (no I/O)",
    "integration: Adapter tests with real backends (Docker required)",
    "e2e: Full pipeline tests in k3d cluster",
    "chaos: Fault injection tests",
    "contract: API and data schema validation",
    "performance: Throughput and latency benchmarks",
    "slow: Tests taking >30 seconds",
    "soak: Long-running endurance tests (hours/days)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:moto.*",
    "ignore::DeprecationWarning:botocore.*",
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::DeprecationWarning:testcontainers.*",
    "ignore::ResourceWarning",
]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-ra",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true  # boto3, azure-mgmt-web etc. have no bundled stubs

[tool.coverage.run]
source = ["src/sre_agent"]
branch = true
omit = [
    "src/sre_agent/tests/*",
    "src/sre_agent/__pycache__/*",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
precision = 1
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ ==",
    "@overload",
    "raise NotImplementedError",
]
